<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Please input your name</string>
    <string name="to_hint">To sb.</string>
    <string name="message_hint">Message you want to send.</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>

</resources>
